<resources>
    <string name="round_1_label">1. kierros</string>
    <string name="round_1">1.</string>
    <string name="round_2">2.</string>
    <string name="round_3">3.</string>
    <string name="round_4">4.</string>
    <string name="round_5">5.</string>
    <string name="round_6">6.</string>
    <string name="round_7">7.</string>
    <string name="round_8">8.</string>
    <string name="round_9">9.</string>
    <string name="round_10">10.</string>
    <string name="round_11">11.</string>
    <string name="round_12">12.</string>
    <string name="round_13">13.</string>
    <string name="round_14">14.</string>
    <string name="round_15">15.</string>
    <string name="round_16">16.</string>
    <string name="round_17">17.</string>
    <string name="round_18">18.</string>
    <string name="round_19">19.</string>
    <string name="round_20">20.</string>
    <string name="round_21">21.</string>
    <string name="round_22">22.</string>
    <string name="round_23">23.</string>
    <string name="round_24">24.</string>
    <string name="round_25">25.</string>
    <string name="round_empty_result">-</string>
    <string name="darts_25">25</string>
    <string name="darts_50">50</string>
    <string name="darts_125">125</string>
    <string name="darts_250">250</string>
    <string name="darts_25_title">25 TIKKAA</string>
    <string name="darts_50_title">50 TIKKAA</string>
    <string name="darts_125_title">125 TIKKAA</string>
    <string name="darts_250_title">250 TIKKAA</string>
    <string name="create_battle">LUO KISA</string>
    <string name="ready_button">KIERROS VALMIS</string>
    <string name="reset_button">NOLLAA</string>
    <string name="start_button">ALOITA</string>
    <string name="players_2">2 pelaajaa</string>
    <string name="players_3">3 pelaajaa</string>
    <string name="players_4">4 pelaajaa</string>
    <string name="player_1">Kisaaja 1:</string>
    <string name="player_2">Kisaaja 2:</string>
    <string name="player_3">Kisaaja 3:</string>
    <string name="player_4">Kisaaja 4:</string>
    <string name="draw">Tasapeli</string>
    <string name="confirm_reset">Haluatko varmasti nollata tiedot?</string>
    <string name="reset_title">Vahvista</string>
    <string name="ok">OK</string>
    <string name="cancel">Peruuta</string>
</resources>
